# ysmd

./: AUTHORS  ChangeLog  INSTALL  Makefile.BeOS  Makefile.in  Makefile.os2  NEWS  README  TODO  aclocal.m4  configure  configure.ac  configure.in  ysm.dev  ysm.dsp  ysm.sln  ysm.vcproj  ysmd.conf
YSMConvert/: README  centericq2ysm.pl  clb2Ysm.sh  trillian2ysm.pl
YSMConvert/contacts_licq2ysm/: catlicquser.sh  licq2Ysm.sh
YSMConvert/contacts_licq2ysm/CVS/: Entries  Repository  Root
include/: bs_oscar.h  bytestream_int.h  charset.h  commands.h  dump.h  icqv7.h  lang.h  output.h  setup.h  slaves.h  wrappers.h
src/: Makefile.in  YSM_Charset.c  YSM_Commands.c  YSM_Compat.h  YSM_Config.h  YSM_Crypt.c  YSM_Crypt.h  YSM_Direct.c  YSM_Direct.h  YSM_FishGUI.c  YSM_FishGUI.h  YSM_ICQv7.h  YSM_Lang.h  YSM_Lists.h  YSM_Network.c  YSM_Prompt.h  YSM_Setup.c  YSM_Slaves.c  YSM_Slaves.h  YSM_Wrappers.c  YSM_Wrappers.h  YSM_os2.c  YSM_os2.h  bs_oscar.c  bs_oscar.h  bytestream.c  bytestream.h  charset.c  charset.h  commands.c  commands.h  compat.h  config.h  control.c  control.h  crypt.c  crypt.h  direct.c  direct.h  dump.c  (+32 more)
src/YSMLangs/: croatian.h  czech.h  french_1.h  german.h  italian.h  portuguesebr.h  spanish.h  swedish.h
src/cmdline/: getline.c  getline.h  ysmline.c  ysmline.h
src/langs/: croatian.h  czech.h  english.h  french_1.h  french_2.h  german.h  italian.h  portuguesebr.h  russian.h  spanish.h  swedish.h
src/man/: Makefile.in  ysm.1
src/rijndael/: rijndael-api-fst.c  rijndael-api-fst.h
src/utils/: ysmdrv
src/utils/ys/: Makefile  ys.c
src/utils/ysmbot/: Makefile  parser.c  parser.h  ysmbot.c  ysmbot.h  ysmproto.txt
